--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <title></title>
+  <link rel="stylesheet" href="styles.css">
+
+  <meta charset="utf-8">
+
+</head>
+
+<body>
+<h1>Hello</h1>
+<button>Click Me</button>
+<button>Click Me</button>
+<button>Click Me</button>
+<button>Click Me</button>
+<button>Click Me</button>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="index.js" charset="utf-8"></script>
+</body>
+
 </html>
