--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title></title>
+  <title>JQuery Test Site</title>
   <link rel="stylesheet" href="styles.css">
 
   <meta charset="utf-8">
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-<h1>Hello</h1>
-<button>Click Me</button>
-<button>Click Me</button>
-<button>Click Me</button>
-<button>Click Me</button>
-<button>Click Me</button>
+  <h1>Hello</h1>
+  <button>Click Me</button>
+  <button>Click Me</button>
+  <button>Click Me</button>
+  <button>Click Me</button>
+  <button>Click Me</button>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="index.js" charset="utf-8"></script>
 </body>
 
