jquery test siote section finished

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 </head>
 
 <body>
+
+  <a href="www.google.com">google</a>
   <h1>Hello</h1>
   <button>Click Me</button>
   <button>Click Me</button>
   <button>Click Me</button>
   <button>Click Me</button>
   <button>Click Me</button>
-
+  <input type="text" name="" value="">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="index.js" charset="utf-8"></script>
 </body>
